@@ -19,8 +19,9 @@ brot2 (0.9~unreleased) oneiric; urgency=low
   Fractal and Colour menus.
   * Fractal setup cosmetic fixes
   * LP#786549: Add prefs for HUD placement and colouring.
+  * LP#783086: Add pref for max number of plotting threads.
 
- -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sat, 12 Nov 2011 22:57:39 +1300
+ -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Fri, 18 Nov 2011 22:23:01 +1300
 
 brot2 (0.5) natty; urgency=low
 
